# mwe_physics_world_with_character

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  main.cpp
assets/maps/: ground_test.blend  ground_test.blend1  ground_test.mtl
graphics/: graphics.cpp  graphics.hpp
graphics/physics_debug_renderer/: drawable_indexed_triangle_vertices.cpp  drawable_indexed_triangle_vertices.hpp  impl.txt  physics_debug_renderer.cpp  physics_debug_renderer.hpp
graphics/shaders/: CWL_v_transformation.vert  fixed_color.frag  matrix_transformation.vert  textured.frag
helpers/: conversions.cpp  conversions.hpp
interaction/: update.cpp  update.hpp
interaction/character/: character.hpp
interaction/input/: input_snapshot.cpp  input_snapshot.hpp
interaction/physics/: jolt_implementation.hpp  physics.cpp  physics.hpp
src/: main.cpp
src/graphics/: graphics.hpp
src/interaction/: update.cpp  update.hpp
src/interaction/character/: character.hpp
